Version 4.0.0 - 2016-05-03
* Return account_kind if account is payable/receivable despite of the move line
  amounts are 0

Version 3.4.0 - 2014-11-03
* Validate that domain dependant fields are not modified if related models exist

Version 3.2.0 - 2014-05-22

Version 3.0.0 - 2013-10-25

Version 2.8.0 - 2013-04-23

Version 2.6.0 - 2012-10-10
* Initial release