@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<data>
-    <xpath
-    expr="/form/notebook/page/field[@name=&quot;second_currency&quot;]"
-    position="after">
-        <label name="payment_type"/>
-        <field name="payment_type"/>
-    </xpath>
-</data>
-
