@@ -1,3 +1,5 @@
+* Remove payment_type from Account Move Line
+
 Version 4.0.0 - 2016-05-03
 * Return account_kind if account is payable/receivable despite of the move line
   amounts are 0
